objects/SFDC_520_QuoteLine__c.object
<CustomObject>
    <description>Individual line items in a quote, do not edit these lines, instead use the custom links on the Quote detail page to add new lines</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ext_Net_Price__c</fullName>
        <formula>Unit_Net_Price__c  *  Qty_Ordered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ext Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ext_Price__c</fullName>
        <formula>Qty_Ordered__c  *  Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ext Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ext_Price_tmp__c</fullName>
        <description>This field is only used by the edit lines visualforce controller, should not be displayed on any page</description>
        <label>Total Sold Price</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>R00N30000001RfDEEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <formula>Product2__r.Production_Issue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Separation__c</fullName>
        <label>Project Separation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qty_Ordered__c</fullName>
        <label>Quantity</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>SFDC_520_Quote__c</referenceTo>
        <relationshipName>Quote_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Discount__c</fullName>
        <label>Sales Discount</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ServiceDate__c</fullName>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit_Net_Price__c</fullName>
        <formula>Unit_Price__c  * (1 - Sales_Discount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Products Sold</label>
    <nameField>
        <displayFormat>QL-{0000}</displayFormat>
        <label>Product Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products_Sold</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Valid_Discount</fullName>
        <active>true</active>
        <errorConditionFormula>Sales_Discount__c &gt;0.95</errorConditionFormula>
        <errorDisplayField>Sales_Discount__c</errorDisplayField>
        <errorMessage>Discount percent may not exceed 95%</errorMessage>
    </validationRules>
</CustomObject>